# ierg3070-asgn2

part1-compl-git/: main.c  mathutils.c
part2-cmake/: CMakeLists.txt  README.md  main.cpp  math_utils.cpp  math_utils.h
